Version 0.0.6 (2020-)
- Code cleanup / optimization
- Add `addDevices` method to server object

Version 0.0.5 (2019-12-31)
- Add channel direction for non-IP devices (Issue #1)
- Add automated device logic for HM-Sen-MDIR-WM55

Version 0.0.4 (2019-12-30)
- Paramset persistance has to be enabled if required
- Raise exception in `getValue` if queried parameter does not exist
- Device addresses are now case insensitive
- Add callback-support based on fired events
- Add automated device logic for HM-Sec-SC-2

Version 0.0.3 (2019-12-25)
- Fix `getParamset` for `MASTER`, returns default or value from `putParamset`
- Add `putParamset` method
- Refactoring

Version 0.0.2 (2019-12-16)
- Add `getParamset` method
- Add `devices` argument for Server-object
- Fire events when `setValue` has been used
- Improve (de)init
- Code cleanup

Version 0.0.1 (2019-12-14)
- Initial version