@@ -21,6 +21,8 @@ ATTR_ADDRESS = 'ADDRESS'
 ATTR_TYPE = 'TYPE'
 ATTR_FLAGS = 'FLAGS'
 ATTR_ERROR = 'ERROR'
+ATTR_PARENT = 'PARENT'
+ATTR_PARENT_TYPE = 'PARENT_TYPE'
 
 PARAMSET_ATTR_MASTER = 'MASTER'
 PARAMSET_ATTR_VALUES = 'VALUES'
